--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,18 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="search-form_block">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">
+          <img class="search-loop" src="images/img.svg" />
+        </button>
+      </form>
+    </div>
   </body>
 </html>
