--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,19 @@
     <div class="search-form_block">
       <form class="search-form" id="search-form">
         <input
+          class="search-form-txt"
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button type="submit">
-          <img class="search-loop" src="images/img.svg" />
+        <button class="btn" type="submit">
+          <img
+            class="search-img"
+            src="images/search.svg"
+            width="16"
+            height="16"
+          />
         </button>
       </form>
     </div>
