--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,9 @@
         </button>
       </form>
     </div>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+    <button type="button" class="load-more">Load more</button>
   </body>
 </html>
