--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <div class="loadBtn">
+      <button type="button" class="load-more">Load more</button>
+    </div>
   </body>
 </html>
