--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <!-- Картки зображень -->
     </div>
     <div class="loadBtn">
-      <button type="button" class="load-more">Load more</button>
+      <button type="button" class="load-more hidden">Load more</button>
     </div>
   </body>
 </html>
